# routes/api/home.php
@@ -7,3 +7,4 @@ Route::get('home', [HomeController::class, 'index']);
 Route::post('contact_requests', [HomeController::class, 'contactRequest']);
 Route::post('emails', [HomeController::class, 'email']);
 Route::get('products', [HomeController::class, 'products']);
+Route::get('products/{id}', [HomeController::class, 'product']);
